--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						   <h3> B. Gecer, B. Bhattarai, J. Kittler and TK. Kim, “Semi-supervised Adversarial Learning to Generate Photorealistic Face Images of New Identities from 3D Morphable Model” ECCV, 2018.</h3>
 							<ul class="news">
 								<li><i class="glyphicon glyphicon-align-left"></i> <a href="#" data-toggle="modal" data-target="#myModal5">Abstract</a></li><li><i class="glyphicon glyphicon-download-alt"></i> <a href="./files/gecer_facegan_2018.pdf">pdf</a></li>
-								
+								<li><i class="glyphicon glyphicon-comment"></i> <a href="https://github.com/barisgecer/facegan">Code</a></li>
 								
 							<li><i class="glyphicon glyphicon-tags"></i> <a href="./files/gecer_facegan_2018.txt">BibTeX</a></li></ul>
 						</div>
