--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /<p class="glyphicon glyphicon-indent-left"></p>
 <a href="https://github.com/barisgecer" target="_blank">Github</a>
 /<p class="glyphicon glyphicon-link"></p>
-<a href="https://www.linkedin.com/in/barisgecer/" target="_blank">LinkedIn</a>
-/<p class="glyphicon glyphicon-list-alt"></p>
-<a href="./cv/CVupdated_2018_08_03.pdf" target="_blank">CV</a></li>
+<a href="https://www.linkedin.com/in/barisgecer/" target="_blank">LinkedIn</a></li>
 							</ul>
 						</li><li>
 							<ul class="address-text">
