--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 /<p class="glyphicon glyphicon-link"></p>
 <a href="https://www.linkedin.com/in/barisgecer/" target="_blank">LinkedIn</a>
 /<p class="glyphicon glyphicon-list-alt"></p>
-<a href="./cv/CVupdated_2018_08_03.pdf" target="_blank">CV</a></li>
+<a href="./files/cv.pdf" target="_blank">CV</a></li>
 							</ul>
 						</li><li>
 							<ul class="address-text">
