--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 					</ul>
 				</div>
 				<div class="col-md-5 header-left">
-					<img src="images/img1.jpg" alt="">
+					<img src="images/baris_gecer_narrow_filtered.jpg" alt="">
 				</div>
 				<div class="clearfix"> </div>
 
@@ -596,7 +596,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 			<!-- //blog-pop-->
 
 			<!-- /header -->
-<div class="footer" id="contact">
+<div class="footer" id="contact" style="min-height: 100%;">
 	<div class="container">
 	<div class="service-head one text-center">
 						<h4>Last Update : 04/07/2019</h4>
@@ -608,7 +608,8 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 
 		<div class="copy_right text-center">
 			<p>© 2016 Preface . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
-
+			<br>
+			<p>Footer Image Credit: Esra Nur Gecer</p>
 		</div>
 	</div>
 </div>
