updated info and news

--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 ">
 				<div id="about_div" class="col-md-7 header-right">
 					<h1>Barış Geçer</h1>
-					<h6>Ph.D. student @ iBUG, DoC, Imperial College London</h6>
+					<h6 style="letter-spacing: 1.5px;">Ph.D. student @ iBUG, Imperial College London</h6>
+					<h6 style="letter-spacing: 1.5px; font-size: 12px; text-transform: capitalize;" >Subject: 3D Computer Vision and Deep Learning</h6>
 					<ul class="address">
-
-
-
-
 						<li>
 							<ul class="address-text">
 
 								<li style="
     width: 100%;
-">I am a PhD. student in the Department of Computing, Imperial College London, under the supervision of <a href="https://wp.doc.ic.ac.uk/szafeiri/">Dr. Stefanos Zafeiriou</a>, working as a member of <a href="https://ibug.doc.ic.ac.uk/">iBUG</a> group.
+">I am a PhD. student at Imperial College London, supervised by <a href="https://wp.doc.ic.ac.uk/szafeiri/">Dr. Stefanos Zafeiriou</a> from <a href="https://ibug.doc.ic.ac.uk/">iBUG</a> and Computer Vision and Deep Learning Scientist at <a href="https://facesoft.io/">Facesoft</a>. Recently, I was a Research Intern at <a href="https://www.facebook.com/careers/areas-of-work/facebookrealitylabs/?teams[0]=Facebook%20Reality%20Labs">Facebook Reality Labs</a>, supervised by <a href="http://www.cs.cmu.edu/~ftorre/">Dr. Fernando De La Torre</a>, worked on <a href="https://tech.fb.com/inside-facebook-reality-labs-research-updates-and-the-future-of-social-connection/">Codec Avatars</a>.
 <br><br>
-My main research interest are photorealistic 3D Face modelling and synthesis by Generative Adversarial Nets and Deep Learning. Currently, I am doing researh internhip at <a href="https://www.facebook.com/careers/areas-of-work/facebookrealitylabs/?teams[0]=Facebook%20Reality%20Labs">Facebook Reality Labs</a>.
+My research goal is to contribute projecting Human Facial Biometrics into the <a href="https://en.wikipedia.org/wiki/Mirror_world">Mirror Worlds</a>. Meaning that, I study high-quality digitalization of Faces into 3D (i.e. AR/VR) while identity, expression and motion related attributes are preserved. For that, I am currently exploring photorealistic 3D Face reconstruction, modelling and synthesis by Generative Adversarial Nets and Deep Learning.
+
 <br><br>
-I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent University Computer Engineering department</a> under the supervision of <a href="http://www.cs.bilkent.edu.tr/~saksoy/">Prof. Selim Aksoy</a> in 2016. And I obtained my undergraduate degree in Computer Engineering from Hacettepe University in 2014. I also did an internship in <a href="http://www.cs.rug.nl/is/">Intelligent Systems Lab of the University of Groningen</a>., with the supervision of <a href="http://www.cs.rug.nl/~petkov/">Prof. Nicolai Petkov</a> and <a href="http://www.cs.rug.nl/~george/">Dr. George Azzopardi</a>.</li>
+
+ <!----I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent University Computer Engineering department</a> under the supervision of <a href="http://www.cs.bilkent.edu.tr/~saksoy/">Prof. Selim Aksoy</a> in 2016. And I obtained my undergraduate degree in Computer Engineering from Hacettepe University in 2014. I also did an internship in <a href="http://www.cs.rug.nl/is/">Intelligent Systems Lab of the University of Groningen</a>., with the supervision of <a href="http://www.cs.rug.nl/~petkov/">Prof. Nicolai Petkov</a> and <a href="http://www.cs.rug.nl/~george/">Dr. George Azzopardi</a>.-->
+</li>
 							</ul>
 						</li><li>
 							<ul class="address-text">
@@ -138,7 +138,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 								<li><b>Research Interest</b></li>
 								<li style="
     width: 70%;
-">3D Face Modeling, Generative Adversarial Networks, Computer Vision, Deep Learning, Face Recognition, Medical Image Analysis</li>
+">3D Face Modeling/Reconstruction/Synthesis, Generative Adversarial Networks, Computer Vision, Deep Learning, Face Recognition</li>
 							</ul>
 						</li>
 
@@ -175,6 +175,21 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 
 							</div><ul class="col-md-6 timeline" style="/* width: 70%; */">
 
+																<li>
+																  <div class="timeline-panel">
+																	<div class="timeline-body">
+																	  <b>January / 2020</b> <a href="https://arxiv.org/abs/2003.13845">One paper</a> accepted to <a href="http://cvpr2020.thecvf.com/">CVPR 2019</a>
+																	</div>
+																  </div>
+																</li>
+																
+																<li>
+																  <div class="timeline-panel">
+																	<div class="timeline-body">
+																	  <b>October / 2019</b> Started  at <a href="https://facesoft.io/">Facesoft</a> as part-time Computer Vision and Deep Learning Scientist
+																	</div>
+																  </div>
+																</li>
 
 																<li>
 																  <div class="timeline-panel">
@@ -315,7 +330,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 				<div class="blog" id="blogs" style=" background: hsl(0, 0%, 91%); ">
 					<div class="container">
 						<div class="service-head text-center">
-
+						<h4>(See Google Scholar for the Up-to-Date List)</h4>
 						<h3><span>Publications</span></h3>
 						<span class="border one"></span>
 					</div>
@@ -599,7 +614,7 @@ I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent 
 <div class="footer" id="contact" style="min-height: 100%;">
 	<div class="container">
 	<div class="service-head one text-center">
-						<h4>Last Update : 04/07/2019</h4>
+						<h4>Last Update : 29/04/2020</h4>
 						<h5 style="
     color: black;
 ">© Baris Gecer. All right reserved</h5>
