--- a/index.html
+++ b/index.html
@@ -615,16 +615,14 @@ My research goal is to contribute projecting Human Facial Biometrics into the <a
 	<div class="container">
 	<div class="service-head one text-center">
 						<h4>Last Update : 29/04/2020</h4>
-						<h5 style="
-    color: black;
-">© Baris Gecer. All right reserved</h5>
+						<h5 style="color: black;">© Baris Gecer. All right reserved</h5>
 						<span class="border two"></span>
 					</div>
 
 		<div class="copy_right text-center">
-			<p>© 2016 Preface . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
+			<p style="color: blue;">© 2016 Preface . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
 			<br>
-			<p>Footer Image Credit: Esra Nur Gecer</p>
+			<p style="color: blue;">Footer Image Credit: Esra Nur Gecer</p>
 		</div>
 	</div>
 </div>
