--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 								<li style="
     width: 100%;
-">I am a Ph.D. student at Imperial College London, supervised by <a href="https://wp.doc.ic.ac.uk/szafeiri/">Dr. Stefanos Zafeiriou</a> from <a href="https://ibug.doc.ic.ac.uk/">iBUG</a> and Computer Vision and Deep Learning Scientist at <a href="https://facesoft.io/">Facesoft</a>. Recently, I was a Research Intern at <a href="https://www.facebook.com/careers/areas-of-work/facebookrealitylabs/?teams[0]=Facebook%20Reality%20Labs">Facebook Reality Labs</a>, supervised by <a href="http://www.cs.cmu.edu/~ftorre/">Dr. Fernando De La Torre</a>, worked on <a href="https://tech.fb.com/inside-facebook-reality-labs-research-updates-and-the-future-of-social-connection/">Codec Avatars</a>.
+">I am a Ph.D. student at Imperial College London, supervised by <a href="https://wp.doc.ic.ac.uk/szafeiri/">Dr. Stefanos Zafeiriou</a> from <a href="https://ibug.doc.ic.ac.uk/">iBUG</a> and Computer Vision and Deep Learning Scientist at <a href="https://facesoft.io/">Facesoft</a>. Recently, I was a Research Intern at <a href="https://www.facebook.com/careers/areas-of-work/facebookrealitylabs/?teams[0]=Facebook%20Reality%20Labs">Facebook Reality Labs</a>, supervised by <a href="http://www.cs.cmu.edu/~ftorre/">Dr. Fernando De La Torre</a>, and worked on <a href="https://tech.fb.com/inside-facebook-reality-labs-research-updates-and-the-future-of-social-connection/">Codec Avatars</a>.
 <br><br>
-My research goal is to contribute projecting Human Facial Biometrics into the <a href="https://en.wikipedia.org/wiki/Mirror_world">Mirror Worlds</a>. Meaning that I study high-quality digitalization of Faces into 3D (i.e. AR/VR) while identity-, expression- and motion-related attributes are preserved. For that, I am currently exploring photorealistic 3D Face reconstruction, modeling, and synthesis by Generative Adversarial Nets and Deep Learning.
+My research goal is to contribute to projecting Human Facial Biometrics into the <a href="https://en.wikipedia.org/wiki/Mirror_world">Mirror Worlds</a>. Meaning that I study high-quality digitalization of Faces into 3D (i.e. AR/VR) while identity-, expression- and motion-related attributes are preserved. For that, I am currently exploring photorealistic 3D Face reconstruction, modeling, and synthesis by Generative Adversarial Nets and Deep Learning.
 
 <br><br>
 
@@ -174,11 +174,19 @@ My research goal is to contribute projecting Human Facial Biometrics into the <a
 ">
 
 							</div><ul class="col-md-6 timeline" style="/* width: 70%; */">
-
+							
 																<li>
 																  <div class="timeline-panel">
 																	<div class="timeline-body">
-																	  <b>January / 2020</b> <a href="https://arxiv.org/abs/2003.13845">One paper</a> accepted to <a href="http://cvpr2020.thecvf.com/">CVPR 2019</a>
+																	  <b>Mar / 2020</b> <a href="https://github.com/steliosploumpis/Universal_Head_3DMM">One paper</a> accepted to <a href="http://cvpr2020.thecvf.com/">TPAMI</a>
+																	</div>
+																  </div>
+																</li>
+																
+																<li>
+																  <div class="timeline-panel">
+																	<div class="timeline-body">
+																	  <b>Feb / 2020</b> <a href="https://github.com/lattas/AvatarMe">One paper</a> accepted to <a href="http://cvpr2020.thecvf.com/">CVPR 2020</a>
 																	</div>
 																  </div>
 																</li>
