--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 ">
 				<div id="about_div" class="col-md-7 header-right">
 					<h1>Barış Geçer</h1>
-					<h6 style="letter-spacing: 1.5px;">Senior Research Scientist @ Huawei Technologies Research & Development (UK) Ltd</h6>
+					<h6 style="letter-spacing: 1.5px;">Senior Applied Scientist @ Amazon Studios & PV</h6>
 					<h6 style="letter-spacing: 1.5px; font-size: 12px; text-transform: capitalize;" >Working on 3D Computer Vision and Deep Learning</h6>
 					<ul class="address">
 						<li>
@@ -108,13 +108,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 								<li style="
     width: 100%;
-">I am a Senior Research Scientist at Huawei R&D UK. I have obtained my Ph.D. degree in Computer Science from Imperial College London, supervised by <a href="https://wp.doc.ic.ac.uk/szafeiri/">Prof. Stefanos Zafeiriou</a> from <a href="https://ibug.doc.ic.ac.uk/">iBUG</a>. Previously, I have been involved in various 3D Face modelling projects at <a href="https://facesoft.io/">Facesoft</a> as a Computer Vision and Deep Learning Scientist. Prior to that, I was a Research Intern at <a href="https://www.facebook.com/careers/areas-of-work/facebookrealitylabs/?teams[0]=Facebook%20Reality%20Labs">Facebook Reality Labs</a>, supervised by <a href="http://www.cs.cmu.edu/~ftorre/">Dr. Fernando De La Torre</a>, and worked on <a href="https://tech.fb.com/inside-facebook-reality-labs-research-updates-and-the-future-of-social-connection/">Codec Avatars</a>.
+">As a Senior Applied Scientist at Amazon Studios & Prime Video, I am passionate about projecting Human Faces into Digital Worlds. Specifically, I specialize in the high-quality digitization of faces into 3D environments (such as AR/VR) while maintaining identity, expression, and motion-related attributes. My current focus involves exploring photorealistic 3D face reconstruction, modeling, and synthesis using techniques such as Generative Adversarial Networks, Deep Learning, and Neural Rendering.
 <br><br>
-My research goal is to project Human Facial Biometrics into the <a href="https://en.wikipedia.org/wiki/Mirror_world">Mirror Worlds</a>. Meaning that I study high-quality digitization of Faces into 3D (i.e. AR/VR) while identity-, expression- and motion-related attributes are preserved. For that, I am currently exploring photorealistic 3D Face reconstruction, modeling, and synthesis by Generative Adversarial Nets and Deep Learning.
-
+I hold a Ph.D. in Computer Science from Imperial College London and have had the privilege of working alongside pioneers in the field such as Stefanos Zafeiriou, Fernando De La Torre, and Josef Kittler. Previously, I worked as a Senior Research Scientist at Huawei UK, a Computer Vision and Deep Learning Scientist at Facesoft, and a Research Intern at Meta Reality Labs. In addition to my professional work, I have also contributed to a few open-source projects with over 14K stars on GitHub. 
 <br><br>
-
- <!----I obtained my M.S. degree from <a href="http://www.cs.bilkent.edu.tr/"> Bilkent University Computer Engineering department</a> under the supervision of <a href="http://www.cs.bilkent.edu.tr/~saksoy/">Prof. Selim Aksoy</a> in 2016. And I obtained my undergraduate degree in Computer Engineering from Hacettepe University in 2014. I also did an internship in <a href="http://www.cs.rug.nl/is/">Intelligent Systems Lab of the University of Groningen</a>., with the supervision of <a href="http://www.cs.rug.nl/~petkov/">Prof. Nicolai Petkov</a> and <a href="http://www.cs.rug.nl/~george/">Dr. George Azzopardi</a>.-->
 </li>
 							</ul>
 						</li><li>
@@ -131,14 +128,14 @@ My research goal is to project Human Facial Biometrics into the <a href="https:/
 /<p class="glyphicon glyphicon-link"></p>
 <a href="https://www.linkedin.com/in/barisgecer/" target="_blank">LinkedIn</a>
 /<p class="glyphicon glyphicon-list-alt"></p>
-<a href="./files/cv_Baris_Gecer_19072022.pdf" target="_blank">CV</a></li>
+<a href="./files/cv_Baris_Gecer_05042023.pdf" target="_blank">CV</a></li>
 							</ul>
 						</li><li>
 							<ul class="address-text">
 								<li><b>Research Interest</b></li>
 								<li style="
     width: 70%;
-">3D Face Modeling/Reconstruction/Synthesis, Generative Adversarial Networks, Computer Vision, Deep Learning, Face Recognition</li>
+">3D Face Modeling/Reconstruction/Synthesis, Generative Adversarial Networks, Neural Rendering, Deep Learning, Face Recognition</li>
 							</ul>
 						</li>
 
@@ -175,6 +172,14 @@ My research goal is to project Human Facial Biometrics into the <a href="https:/
 
 							</div><ul class="col-md-6 timeline" style="/* width: 70%; */">
 							
+
+<li>
+																  <div class="timeline-panel">
+																	<div class="timeline-body">
+																	  <b>December / 2022</b> Started  at Amazon Studios and Prime Video as Senior Applied Scientist
+																	</div>
+																  </div>
+																</li>
 
 
 
