--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     background: rgba(23, 20, 20, 0.9);
 ">
 				<div id="about_div" class="col-md-7 header-right">
-					<h1>Barış Geçer</h1>
-					<h6 style="letter-spacing: 1.5px;">Senior Applied Scientist @ Amazon Studios & PV</h6>
-					<h6 style="letter-spacing: 1.5px; font-size: 12px; text-transform: capitalize;" >Working on 3D Computer Vision and Deep Learning</h6>
-					<ul class="address">
-						<li>
-							<ul class="address-text">
-
-								<li style="
-    width: 100%;
-">As a Senior Applied Scientist at Amazon Studios & Prime Video, I am passionate about projecting Human Faces into Digital Worlds. Specifically, I specialize in the high-quality digitization of faces into 3D environments (such as AR/VR) while maintaining identity, expression, and motion-related attributes. My current focus involves exploring photorealistic 3D face reconstruction, modeling, and synthesis using techniques such as Generative Adversarial Networks, Deep Learning, and Neural Rendering.
-<br><br>
-I hold a Ph.D. in Computer Science from Imperial College London and have had the privilege of working alongside pioneers in the field such as Stefanos Zafeiriou, Fernando De La Torre, and Josef Kittler. Previously, I worked as a Senior Research Scientist at Huawei UK, a Computer Vision and Deep Learning Scientist at Facesoft, and a Research Intern at Meta Reality Labs. In addition to my professional work, I have also contributed to a few open-source projects with over 14K stars on GitHub. 
-<br><br>
-</li>
-							</ul>
+<h1>Barış Geçer</h1>
+<h6 style="letter-spacing: 1.5px;">Senior Applied Scientist @ Amazon Ads</h6>
+<h6 style="letter-spacing: 1.5px; font-size: 12px; text-transform: capitalize;">Pioneering Generative AI for Video Synthesis</h6>
+<ul class="address">
+    <li>
+        <ul class="address-text">
+            <li style="width: 100%;">
+                As a Senior Applied Scientist at Amazon Ads, I am deeply engaged in pushing the boundaries of video generation through state-of-the-art Generative AI techniques. My expertise lies in training, fine-tuning, and evaluating large-scale video models, leveraging Diffusion Models and Transformers to produce high-quality, realistic video content. <br><br>
+                My research journey has also explored groundbreaking areas such as photorealistic 3D face reconstruction, modeling, and synthesis, utilizing cutting-edge technologies like Generative Adversarial Networks, Deep Learning, and Neural Rendering. <br><br>
+                I earned my Ph.D. in Computer Science from Imperial College London, where I had the honor of collaborating with renowned experts Stefanos Zafeiriou, Fernando De La Torre, and Josef Kittler. My professional path includes roles as a Senior Research Scientist at Huawei UK, a Computer Vision and Deep Learning Scientist at Facesoft, and a Research Intern at Meta Reality Labs. <br><br>
+                Beyond my professional achievements, I actively contribute to the open-source community, with several projects collectively earning over 24,000 stars on GitHub. <br><br>
+            </li>
+        </ul>
+    </li>
+</ul>
 						</li><li>
 							<ul class="address-text">
 								<li><b>E-mail</b></li>
